# nebula

./: Cargo.toml  README.md
src/: action.rs  app.rs  main.rs
src/ui/: preview.rs
src/vfs/: mod.rs  scanner.rs  watcher.rs
