[package]
name = "nebula"
version = "0.1.0"
edition = "2021"
description = "A blazing-fast, GUI-quality terminal file manager"

[dependencies]
# TUI rendering
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Filesystem watching (inotify/kqueue/FSEvents)
notify = "7"

# File metadata & permissions (Unix)
nix = { version = "0.29", features = ["fs", "user"] }

# Human-readable file sizes
humansize = "2"

# Time formatting
chrono = "0.4"

# Error handling
anyhow = "1"
thiserror = "2"

# Unicode width for proper alignment
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
